--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Sync Files to EC2
       run: |
-        rsync -avz --delete deploy/ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ubuntu/BookTicketWebApp/
+        rsync -avz --delete --exclude='.env' deploy/ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ubuntu/BookTicketWebApp/
 
     - name: Reload PM2 on EC2
       run: |
