--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,47 +10,45 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
+    - name: 📦 Checkout Code
       uses: actions/checkout@v3
 
-    - name: Setup Node.js
+    - name: 🧰 Setup Node.js
       uses: actions/setup-node@v3
       with:
         node-version: 20
 
-    - name: Install Dependencies
-      run: npm install
+    - name: 📥 Install Dependencies for Build
+      run: npm ci
 
-    - name: Build TypeScript
+    - name: 🛠️ Build TypeScript
       run: npm run build
 
-    - name: Prepare Deployment Folder
+    - name: 🧹 Prepare Clean Deployment Folder
       run: |
         mkdir deploy
         cp -r dist deploy/
         cp ecosystem.config.js package.json package-lock.json deploy/
-        # Optional: Copy .env or public folders if required
-        # cp .env deploy/
 
-    - name: Install Production Dependencies
+    - name: 📥 Install Production Dependencies
       run: |
         cd deploy
-        npm install --production
+        npm ci --omit=dev  # faster & safer than npm install --production
 
-    - name: Setup SSH Access
+    - name: 🔐 Setup SSH Access
       uses: webfactory/ssh-agent@v0.5.4
       with:
         ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
-    - name: Add EC2 host to known_hosts
+    - name: 📬 Add EC2 to known_hosts
       run: |
         ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts 
 
-    - name: Sync Files to EC2
+    - name: 🚀 Deploy via rsync to EC2
       run: |
         rsync -avz --delete --exclude='.env' deploy/ ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ubuntu/BookTicketWebApp/
 
-    - name: Reload PM2 on EC2
+    - name: 🔁 Reload PM2 on EC2
       run: |
         ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
           cd /home/ubuntu/BookTicketWebApp
