--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "mongoose": "^8.15.1",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "dotenv": "^16.5.0",
+    "cors": "^2.8.5"
   }
 }
